Fixed the background video on mobile

--- a/style.css
+++ b/style.css
@@ -52,9 +52,8 @@ h2 {
   font-weight: 200;
 }
 
-
 video {
-  max-width: 100vw;
+  min-height: 100vh;
 }
 
 .about-shade {
